Make nsFocusController::MoveFocus() return an error code when it fails. Patch by Daniel Bainton <daniel.bainton@gmail.com>. b=381404 r=me sr=jst